Avoid width overflow

--- a/src/components/UI/AddModalSection.module.css
+++ b/src/components/UI/AddModalSection.module.css
@@ -1,5 +1,4 @@
 .AddModalSection {
-  width: 100%;
   justify-content: center;
   background-color: #B9F1AE;
   border: solid 1px #a6d89c;
